--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "emotion": "10.0.27",
+    "firebase": "^8.2.3",
     "firebase-tools": "^9.2.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-firebase-file-uploader": "^2.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,5 +20,17 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
